--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "proshop",
   "version": "1.0.0",
+  "type": "module",
   "description": "MERN shopping cart app",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/Mirzamurod/ProShop#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
