--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "author": "Mirzamurod Rahimberdiyev",
     "license": "MIT",
     "bugs": {
-       "url": "https://github.com/Mirzamurod/ProShop/issues"
+        "url": "https://github.com/Mirzamurod/ProShop/issues"
     },
     "homepage": "https://github.com/Mirzamurod/ProShop#readme",
     "dependencies": {
@@ -30,10 +30,12 @@
         "express": "^4.17.1",
         "express-async-handler": "^1.1.4",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.11.9"
+        "mongoose": "^5.11.9",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.2"
     },
     "devDependencies": {
         "concurrently": "^5.3.0",
         "nodemon": "^2.0.6"
-  }
+    }
 }
